@@ -23,11 +23,6 @@
                 <version>1.1.0.Final</version>
             </dependency>
             <dependency>
-                <groupId>com.google.code.gson</groupId>
-                <artifactId>gson</artifactId>
-                <version>${gson.version}</version>
-            </dependency>
-            <dependency>
                 <groupId>fi.vm.sade</groupId>
                 <artifactId>scala-cas_2.11</artifactId>
                 <version>${scala-cas_2.11.version}</version>
@@ -115,7 +110,6 @@
         <dependency>
             <groupId>fi.vm.sade.dokumenttipalvelu</groupId>
             <artifactId>dokumenttipalvelu</artifactId>
-            <version>6.12-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>io.swagger</groupId>
@@ -452,6 +446,11 @@
             <artifactId>gson</artifactId>
         </dependency>
         <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-access</artifactId>
+            <version>${logback-access.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.mock-server</groupId>
             <artifactId>mockserver-netty</artifactId>
             <version>3.10.4</version>
@@ -550,7 +549,7 @@
                         <exclude>**/*Spec.java</exclude>
                         <exclude>**/*Test.java</exclude>
                     </includes>
-                    <argLine>-Xms512M -Xmx1G -XX:MaxPermSize=512M -DJAVA11_HOME=${env.JAVA11_HOME}</argLine>
+                    <argLine>-Xms512M -Xmx1G  --add-opens=java.base/java.time=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED</argLine>
                     <systemProperties>
                         <valintatulos.profile>it</valintatulos.profile>
                     </systemProperties>
